--- a/com.googlecode.iterm2.plist
+++ b/com.googlecode.iterm2.plist
@@ -16,7 +16,11 @@
 	<integer>1</integer>
 	<key>Default Bookmark Guid</key>
 	<string>8B66B138-D643-48C6-87A8-9E0EDD29B372</string>
+	<key>DimOnlyText</key>
+	<false/>
 	<key>HideFromDockAndAppSwitcher</key>
+	<true/>
+	<key>HideMenuBarInFullscreen</key>
 	<true/>
 	<key>HotKeyBookmark</key>
 	<string>2B1C7971-28C5-4BCD-A418-3E93A7EC9B0A</string>
@@ -70,9 +74,9 @@
 	<key>NSWindow Frame NSFontPanel</key>
 	<string>340 342 445 77 0 0 1440 878 </string>
 	<key>NSWindow Frame SharedPreferences</key>
-	<string>342 172 796 473 0 0 1440 878 </string>
+	<string>342 264 796 473 0 0 1440 878 </string>
 	<key>NSWindow Frame iTerm Window 0</key>
-	<string>43 416 570 452 0 0 1440 878 </string>
+	<string>1 8 605 867 0 0 1440 878 </string>
 	<key>NSWindow Frame iTerm Window 1</key>
 	<string>661 248 570 452 0 0 1440 878 </string>
 	<key>New Bookmarks</key>
@@ -1352,6 +1356,8 @@
 	<false/>
 	<key>NoSyncTimeOfFirstLaunchOfVersionWithTip</key>
 	<real>506152299.38066</real>
+	<key>OnlyWhenMoreTabs</key>
+	<false/>
 	<key>OpenArrangementAtStartup</key>
 	<false/>
 	<key>OpenNoWindowsAtStartup</key>
@@ -1394,7 +1400,7 @@
 	<key>PrefsCustomFolder</key>
 	<string>/Users/todd/configs</string>
 	<key>PromptOnQuit</key>
-	<true/>
+	<false/>
 	<key>SUEnableAutomaticChecks</key>
 	<true/>
 	<key>SUFeedAlternateAppNameKey</key>
@@ -1404,11 +1410,17 @@
 	<key>SUHasLaunchedBefore</key>
 	<true/>
 	<key>SULastCheckTime</key>
-	<date>2017-01-23T07:58:16Z</date>
+	<date>2017-01-26T06:49:14Z</date>
 	<key>SUSendProfileInfo</key>
 	<false/>
+	<key>ShowBookmarkName</key>
+	<true/>
 	<key>ShowFullScreenTabBar</key>
 	<true/>
+	<key>SplitPaneDimmingAmount</key>
+	<real>0.13512620192307698</real>
+	<key>TabStyle</key>
+	<integer>1</integer>
 	<key>WordCharacters</key>
 	<string>/-+\~_.</string>
 	<key>iTerm Version</key>
