--- a/com.googlecode.iterm2.plist
+++ b/com.googlecode.iterm2.plist
@@ -16,11 +16,7 @@
 	<integer>1</integer>
 	<key>Default Bookmark Guid</key>
 	<string>8B66B138-D643-48C6-87A8-9E0EDD29B372</string>
-	<key>DimOnlyText</key>
-	<false/>
 	<key>HideFromDockAndAppSwitcher</key>
-	<true/>
-	<key>HideMenuBarInFullscreen</key>
 	<true/>
 	<key>HotKeyBookmark</key>
 	<string>2B1C7971-28C5-4BCD-A418-3E93A7EC9B0A</string>
@@ -37,7 +33,7 @@
 	<key>LoadPrefsFromCustomFolder</key>
 	<true/>
 	<key>NSNavLastRootDirectory</key>
-	<string>~/configs</string>
+	<string>~/dotfiles</string>
 	<key>NSNavPanelExpandedSizeForOpenMode</key>
 	<string>{712, 448}</string>
 	<key>NSQuotedKeystrokeBinding</key>
@@ -55,7 +51,7 @@
 	gAKACoAN0xAJChEVGVdOUy5rZXlzoxITFIADgASABaMWFxiABoAHgAiACVpJZGVudGlm
 	aWVyVVdpZHRoVkhpZGRlblEwI0BowAAAAAAACNIhIiMkWiRjbGFzc25hbWVYJGNsYXNz
 	ZXNcTlNEaWN0aW9uYXJ5oiMlWE5TT2JqZWN00xAJCicrGaMSExSAA4AEgAWjLC0YgAuA
-	DIAIgAlRMSNAdCGdsi0OVtIhIjM0Xk5TTXV0YWJsZUFycmF5ozM1JVdOU0FycmF5XxAP
+	DIAIgAlRMSNAczGdsi0OVtIhIjM0Xk5TTXV0YWJsZUFycmF5ozM1JVdOU0FycmF5XxAP
 	TlNLZXllZEFyY2hpdmVy0Tg5VUFycmF5gAEACAARABoAIwAtADIANwBGAEwAUQBcAGMA
 	ZgBoAGoAbABzAHsAfwCBAIMAhQCJAIsAjQCPAJEAnACiAKkAqwC0ALUAugDFAM4A2wDe
 	AOcA7gDyAPQA9gD4APwA/gEAAQIBBAEGAQ8BFAEjAScBLwFBAUQBSgAAAAAAAAIBAAAA
@@ -72,13 +68,11 @@
 	<key>NSTableView Supports v2 KeyBingingTable</key>
 	<true/>
 	<key>NSWindow Frame NSFontPanel</key>
-	<string>340 342 445 77 0 0 1440 878 </string>
+	<string>2677 501 851 103 1680 -30 1920 1058 </string>
 	<key>NSWindow Frame SharedPreferences</key>
-	<string>342 264 796 473 0 0 1440 878 </string>
+	<string>2582 337 796 473 1680 -30 1920 1058 </string>
 	<key>NSWindow Frame iTerm Window 0</key>
-	<string>1 8 605 867 0 0 1440 878 </string>
-	<key>NSWindow Frame iTerm Window 1</key>
-	<string>661 248 570 452 0 0 1440 878 </string>
+	<string>2433 175 1019 747 1680 -30 1920 1058 </string>
 	<key>New Bookmarks</key>
 	<array>
 		<dict>
@@ -1351,13 +1345,11 @@
 	<key>NoSyncHaveWarnedAboutPasteConfirmationChange</key>
 	<true/>
 	<key>NoSyncInstallationId</key>
-	<string>485C9D0A-47D6-4E25-94B5-B56BFA1D840C</string>
+	<string>3BB401D5-185C-4B69-8145-CC055177C14F</string>
 	<key>NoSyncPermissionToShowTip</key>
 	<false/>
 	<key>NoSyncTimeOfFirstLaunchOfVersionWithTip</key>
-	<real>506152299.38066</real>
-	<key>OnlyWhenMoreTabs</key>
-	<false/>
+	<real>506873822.23710799</real>
 	<key>OpenArrangementAtStartup</key>
 	<false/>
 	<key>OpenNoWindowsAtStartup</key>
@@ -1398,29 +1390,23 @@
 		</dict>
 	</dict>
 	<key>PrefsCustomFolder</key>
-	<string>/Users/todd/configs</string>
+	<string>/Users/t.tilby/dotfiles</string>
 	<key>PromptOnQuit</key>
-	<false/>
-	<key>SUEnableAutomaticChecks</key>
 	<true/>
+	<key>SUEnableAutomaticChecks</key>
+	<false/>
 	<key>SUFeedAlternateAppNameKey</key>
 	<string>iTerm</string>
 	<key>SUFeedURL</key>
-	<string>https://iterm2.com/appcasts/final.xml?shard=32</string>
+	<string>https://iterm2.com/appcasts/final.xml?shard=29</string>
 	<key>SUHasLaunchedBefore</key>
 	<true/>
-	<key>SULastCheckTime</key>
-	<date>2017-01-26T06:49:14Z</date>
 	<key>SUSendProfileInfo</key>
 	<false/>
-	<key>ShowBookmarkName</key>
-	<true/>
 	<key>ShowFullScreenTabBar</key>
 	<true/>
 	<key>SplitPaneDimmingAmount</key>
-	<real>0.13512620192307698</real>
-	<key>TabStyle</key>
-	<integer>1</integer>
+	<real>0.14015925480769234</real>
 	<key>WordCharacters</key>
 	<string>/-+\~_.</string>
 	<key>iTerm Version</key>
