--- a/sampler-config.yml
+++ b/sampler-config.yml
@@ -6,5 +6,14 @@ textboxes:
       rate-ms: 1000
       sample: docker stats --no-stream --format "table {{.Name}}\t{{.CPUPerc}}\t{{.MemUsage}}\t{{.PIDs}}"
     - title: Services
-      rate-ms: 1000
-      sample: systemctl status rabbitmq-server | grep Active
+      rate-ms: 10000
+      sample: service rabbitmq-server status | grep Active && service postgresql status | grep Active && service redis status | grep Active && service cassandra status | grep Active
+    - title: RabbitMQ
+      rate-ms: 10000
+      sample: service rabbitmq-server status | grep Active
+    - title: Postgresql
+      rate-ms: 10000
+      sample: service postgresql status | grep Active
+    - title: Rome
+      rate-ms: 10000
+      sample: if cd /home/todd/CProjects/rome/packages_venv; then bin/activate && supervisorctl status fi 
