added tmux conf

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,14 +1,39 @@
 # tmux configuration file
 
 # easy tmux reload
-bind r source-file ~/.tmux.conf
+bind r source-file ~/.tmux.conf \; display "Reloaded ~/.tmux.conf"
 
 # set mouse mode to allow use of mouse for copying, scrolling, etc.
 set -g mouse on
 set -g default-terminal "screen-256color"
 set -g base-index 1
 set -g pane-base-index 1
-setw -g utf8 on
 
 # needed for vim-gitgutter to update properly
 set -g focus-events
+
+#--------------------------------------------------------------#
+# Pane colors
+# set active/inactive window styles
+set -g window-style 'fg=colour247,bg=colour236'
+set -g window-active-style 'fg=colour250'
+#--------------------------------------------------------------#
+
+# vi keybindings
+
+#--------------------------------------------------------------#
+# copy / paste with system clipboard
+# *** WIP ***
+#--------------------------------------------------------------#
+
+# macos: brew install reattach-to-user-namespace
+# copy
+#if-shell 'uname | grep -qi Darwin && which reattach-to-user-namespace > /dev/null' 'bind-key -n -t emacs-copy M-w copy-pipe "reattach-to-user-namespace pbcopy"'
+# paste
+#if-shell 'uname | grep -qi Darwin && which reattach-to-user-namespace > /dev/null' 'bind 
+
+# linux: sudo apt install xclip
+# copy
+#if-shell 'uname | grep -qi Linux && which xclip > /dev/null' 'bind-key -n -t emacs-copy M-w copy-pipe "xclip -i -sel p -f | xclip -i -sel c "'
+# paste:
+#if-shell 'uname | grep -qi Linux && which xclip > /dev/null' 'bind-key -n C-y run "xclip -o
