added vim and tmux plugins, need to clean up tmux plugins to use submodules

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -19,6 +19,11 @@ set -g window-style 'fg=colour247,bg=colour236'
 set -g window-active-style 'fg=colour250'
 #--------------------------------------------------------------#
 
+# Status bar
+# set -g status-right "#[fg=green]#($TMUX_PLUGIN_MANAGER_PATH/tmux-mem-cpu-load/tmux-mem-cpu-load --colors --powerline-right --interval 2)#[default]"
+
+
+
 # vi keybindings
 
 #--------------------------------------------------------------#
@@ -37,3 +42,16 @@ set -g window-active-style 'fg=colour250'
 #if-shell 'uname | grep -qi Linux && which xclip > /dev/null' 'bind-key -n -t emacs-copy M-w copy-pipe "xclip -i -sel p -f | xclip -i -sel c "'
 # paste:
 #if-shell 'uname | grep -qi Linux && which xclip > /dev/null' 'bind-key -n C-y run "xclip -o
+
+#--------------------------------------------------------------#
+# Plugins (using tpm)
+#  After adding a new plugin, press <prefix>+I to fetch the plugin
+#  (all are installed to ~/.tmux/plugins/)
+#  Use <prefix>+U to update plugins
+# List of plugins
+#set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'thewtex/tmux-mem-cpu-load'
+
+# Initialize TMUX plugin manager (keep this line at the very bottom of
+# .tmux.conf
+# run -b  '~/.tmux/plugins/tpm/tpm'
