--- a/.tmux.conf
+++ b/.tmux.conf
@@ -20,9 +20,12 @@ set -g window-active-style 'fg=colour250'
 #--------------------------------------------------------------#
 
 # Status bar
-# set -g status-right "#[fg=green]#($TMUX_PLUGIN_MANAGER_PATH/tmux-mem-cpu-load/tmux-mem-cpu-load --colors --powerline-right --interval 2)#[default]"
+set -g status-interval 2
+set -g status-left '#[fg=green]#(tmux-mem-cpu-load --colors --powerline-right --interval 2)#[default]'
+set -g status-right 'Continuum status: #{continuum_status}'
 
-
+# Session Management
+set -g @continuum-save-interval '15'
 
 # vi keybindings
 
@@ -50,8 +53,11 @@ set -g window-active-style 'fg=colour250'
 #  Use <prefix>+U to update plugins
 # List of plugins
 #set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'thewtex/tmux-mem-cpu-load'
+# set -g @plugin 'thewtex/tmux-mem-cpu-load'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of
 # .tmux.conf
 # run -b  '~/.tmux/plugins/tpm/tpm'
+run-shell ~/.tmux/plugins/resurrect/resurrect.tmux
+run-shell ~/.tmux/plugins/continuum/continuum.tmux
+
