working tmux status bar

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -21,8 +21,12 @@ set -g window-active-style 'fg=colour250'
 
 # Status bar
 set -g status-interval 2
-set -g status-left '#[fg=green]#(tmux-mem-cpu-load --colors --powerline-right --interval 2)#[default]'
-set -g status-right 'Continuum status: #{continuum_status}'
+set -g status-justify centre              # window list in middle
+# show host name and IP address on left side of status bar
+set -g status-left-length 85
+set -g status-left ''
+set -g status-right-length 100
+set -g status-right 'continuum:#{continuum_status}m#[fg=green]#($TMUX_PLUGIN_MANAGER_PATH/tmux-mem-cpu-load/tmux-mem-cpu-load --colors --powerline-right --interval 2)#[default]'
 
 # Session Management
 set -g @continuum-save-interval '15'
@@ -46,18 +50,6 @@ set -g @continuum-save-interval '15'
 # paste:
 #if-shell 'uname | grep -qi Linux && which xclip > /dev/null' 'bind-key -n C-y run "xclip -o
 
-#--------------------------------------------------------------#
-# Plugins (using tpm)
-#  After adding a new plugin, press <prefix>+I to fetch the plugin
-#  (all are installed to ~/.tmux/plugins/)
-#  Use <prefix>+U to update plugins
-# List of plugins
-#set -g @plugin 'tmux-plugins/tpm'
-# set -g @plugin 'thewtex/tmux-mem-cpu-load'
-
-# Initialize TMUX plugin manager (keep this line at the very bottom of
-# .tmux.conf
-# run -b  '~/.tmux/plugins/tpm/tpm'
 run-shell ~/.tmux/plugins/resurrect/resurrect.tmux
 run-shell ~/.tmux/plugins/continuum/continuum.tmux
 
