--- a/.tmux.conf
+++ b/.tmux.conf
@@ -29,7 +29,7 @@ set -g status-right-length 100
 set -g status-right 'continuum:#{continuum_status}m#[fg=green]#($TMUX_PLUGIN_MANAGER_PATH/tmux-mem-cpu-load/tmux-mem-cpu-load --colors --powerline-right --interval 2)#[default]'
 
 # Session Management
-set -g @continuum-save-interval '15'
+set -g @continuum-save-interval '720' # minutes (720 = 12 hours)
 
 # vi keybindings
 
@@ -52,4 +52,4 @@ set -g @continuum-save-interval '15'
 
 run-shell ~/.tmux/plugins/resurrect/resurrect.tmux
 run-shell ~/.tmux/plugins/continuum/continuum.tmux
-
+run-shell ~/.tmux/plugins/yank/yank.tmux
