--- a/.tmux.conf
+++ b/.tmux.conf
@@ -19,6 +19,24 @@ set -g window-style 'fg=colour247,bg=colour236'
 set -g window-active-style 'fg=colour250'
 #--------------------------------------------------------------#
 
+#--------------------------------------------------------------#
+# Smart pane switching with awareness of Vim splits.
+# See: https://github.com/christoomey/vim-tmux-navigator
+is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
+    | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
+bind-key -n C-h if-shell "$is_vim" "send-keys C-h"  "select-pane -L"
+bind-key -n C-j if-shell "$is_vim" "send-keys C-j"  "select-pane -D"
+bind-key -n C-k if-shell "$is_vim" "send-keys C-k"  "select-pane -U"
+bind-key -n C-l if-shell "$is_vim" "send-keys C-l"  "select-pane -R"
+bind-key -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
+bind-key -T copy-mode-vi C-h select-pane -L
+bind-key -T copy-mode-vi C-j select-pane -D
+bind-key -T copy-mode-vi C-k select-pane -U
+bind-key -T copy-mode-vi C-l select-pane -R
+bind-key -T copy-mode-vi C-\ select-pane -l
+#--------------------------------------------------------------#
+
+#--------------------------------------------------------------#
 # Status bar
 set -g status-interval 2
 set -g status-justify centre              # window list in middle
@@ -27,7 +45,9 @@ set -g status-left-length 85
 set -g status-left ''
 set -g status-right-length 100
 set -g status-right 'continuum:#{continuum_status}m#[fg=green]#($TMUX_PLUGIN_MANAGER_PATH/tmux-mem-cpu-load/tmux-mem-cpu-load --colors --powerline-right --interval 2)#[default]'
+#--------------------------------------------------------------#
 
+#--------------------------------------------------------------#
 # Session Management
 set -g @continuum-save-interval '720' # minutes (720 = 12 hours)
 
@@ -50,6 +70,7 @@ set -g @continuum-save-interval '720' # minutes (720 = 12 hours)
 # paste:
 #if-shell 'uname | grep -qi Linux && which xclip > /dev/null' 'bind-key -n C-y run "xclip -o
 
+#--------------------------------------------------------------#
 run-shell ~/.tmux/plugins/resurrect/resurrect.tmux
 run-shell ~/.tmux/plugins/continuum/continuum.tmux
 run-shell ~/.tmux/plugins/yank/yank.tmux
