added vi settings to tmux, added wildmenu to vim

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -57,6 +57,7 @@ set -g @continuum-save-interval '720' # minutes (720 = 12 hours)
 # copy / paste with system clipboard
 # *** WIP ***
 #--------------------------------------------------------------#
+setw -g mode-keys vi
 
 # macos: brew install reattach-to-user-namespace
 # copy
