add shortcut F5 for vim bufexplorer, another try at tmux copy

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -59,6 +59,8 @@ set -g @continuum-save-interval '720' # minutes (720 = 12 hours)
 #--------------------------------------------------------------#
 setw -g mode-keys vi
 
+bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "xclip -in -selection clipboard"
+
 # macos: brew install reattach-to-user-namespace
 # copy
 #if-shell 'uname | grep -qi Darwin && which reattach-to-user-namespace > /dev/null' 'bind-key -n -t emacs-copy M-w copy-pipe "reattach-to-user-namespace pbcopy"'
