--- a/.tmux.conf
+++ b/.tmux.conf
@@ -17,6 +17,7 @@ set -g focus-events
 # set active/inactive window styles
 set -g window-style 'fg=colour247,bg=colour236'
 set -g window-active-style 'fg=colour250'
+setw -g window-status-current-style fg=white,bg=black
 #--------------------------------------------------------------#
 
 #--------------------------------------------------------------#
