added notes to tmux.conf

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,5 +1,13 @@
 # tmux configuration file
 
+# README
+#===================================================================
+# tmux-mem-cpu-load must be installed to function
+# cmake .
+# make
+# make install
+#===================================================================
+
 # easy tmux reload
 bind r source-file ~/.tmux.conf \; display "Reloaded ~/.tmux.conf"
 
