--- a/.tmux.conf
+++ b/.tmux.conf
@@ -16,6 +16,7 @@ set -g mouse on
 set -g default-terminal "screen-256color"
 set -g base-index 1
 set -g pane-base-index 1
+set -g history-limit 20000
 
 # needed for vim-gitgutter to update properly
 set -g focus-events
@@ -59,6 +60,7 @@ set -g status-right 'continuum:#{continuum_status}m#[fg=green]#($TMUX_PLUGIN_MAN
 #--------------------------------------------------------------#
 # Session Management
 set -g @continuum-save-interval '720' # minutes (720 = 12 hours)
+set -g @resurrect-strategy-vim 'session'
 
 # vi keybindings
 
