tmux: better split keys; vim: added comments

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -21,6 +21,12 @@ set -g history-limit 20000
 # needed for vim-gitgutter to update properly
 set -g focus-events
 
+# custom split keys
+unbind-key %
+bind-key | split-window -h
+unbind-key '"'
+bind-key - split-window -v
+
 #--------------------------------------------------------------#
 # Pane colors
 # set active/inactive window styles
