--- a/.tmux.conf
+++ b/.tmux.conf
@@ -30,8 +30,8 @@ bind-key - split-window -v
 #--------------------------------------------------------------#
 # Pane colors
 # set active/inactive window styles
-set -g window-style 'fg=colour247,bg=colour236'
-set -g window-active-style 'fg=colour250'
+set -g window-style 'fg=colour247,bg=colour237'
+set -g window-active-style 'fg=colour250,bg=colour234'
 setw -g window-status-current-style fg=white,bg=black
 #--------------------------------------------------------------#
 
