--- a/.tmux.conf
+++ b/.tmux.conf
@@ -30,9 +30,15 @@ bind-key - split-window -v
 #--------------------------------------------------------------#
 # Pane colors
 # set active/inactive window styles
-set -g window-style 'fg=colour247,bg=colour237'
-set -g window-active-style 'fg=colour250,bg=colour234'
+set -g window-style 'fg=colour247,bg=colour236'
+set -g window-active-style 'fg=colour250,bg=colour235'
 setw -g window-status-current-style fg=white,bg=black
+
+#pane border
+set -g pane-border-bg colour236
+set -g pane-border-fg colour247
+set -g pane-active-border-bg colour235
+set -g pane-active-border-fg colour255
 #--------------------------------------------------------------#
 
 #--------------------------------------------------------------#
