--- a/.tmux.conf
+++ b/.tmux.conf
@@ -41,6 +41,14 @@ set -g pane-active-border-bg colour235
 set -g pane-active-border-fg colour255
 #--------------------------------------------------------------#
 
+# Testing git status in tmux
+set -g pane-border-status bottom
+set -g pane-border-format '#(sh ~/.tmux/pane-border-format.sh \
+  --pane-current-path=#{pane_current_path} \
+  --pane-active=#{pane_active})'
+set -s status-interval 1
+#--------------------------------------------------------------#
+
 #--------------------------------------------------------------#
 # Smart pane switching with awareness of Vim splits.
 # See: https://github.com/christoomey/vim-tmux-navigator
