--- a/.tmux.conf
+++ b/.tmux.conf
@@ -43,7 +43,7 @@ set -g pane-active-border-fg colour255
 
 # Testing git status in tmux
 set -g pane-border-status bottom
-set -g pane-border-format '#(sh ~/.tmux/pane-border-format.sh \
+set -g pane-border-format '#(bash ~/.tmux/pane-border-format.sh \
   --pane-current-path=#{pane_current_path} \
   --pane-active=#{pane_active})'
 set -s status-interval 1
