--- a/.tmux.conf
+++ b/.tmux.conf
@@ -7,6 +7,12 @@
 # make
 # make install
 #===================================================================
+# the pane-border-format.sh script will not work on default bash that
+# comes with macOS (v3.2). Need to update bash.
+# brew install bash
+# sudo vim /etc/shells
+# add /usr/local/bin/bash
+#===================================================================
 
 # easy tmux reload
 bind r source-file ~/.tmux.conf \; display "Reloaded ~/.tmux.conf"
