--- a/.tmux.conf
+++ b/.tmux.conf
@@ -41,14 +41,8 @@ set -g window-active-style 'fg=colour250,bg=colour235'
 setw -g window-status-current-style fg=white,bg=black
 
 #pane border
-#set -g pane-border-bg colour236
-#set -g pane-border-fg colour247
-#set -g pane-active-border-bg colour235
-#set -g pane-active-border-fg colour255
-set -g pane-border-bg colour236
-set -g pane-border-fg colour247
-set -g pane-active-border-bg colour236
-set -g pane-active-border-fg colour112
+set-option -g pane-border-style 'bg=colour236,fg=colour247'
+set-option -g pane-active-border-style 'bg=colour236,fg=colour112'
 #--------------------------------------------------------------#
 
 # Testing git status in tmux
