fix esc delay in nvim

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -33,6 +33,9 @@ bind-key | split-window -h
 unbind-key '"'
 bind-key - split-window -v
 
+# Added to prevent odd delay when hitting ESC in neovim
+set -sg escape-time 10
+
 #--------------------------------------------------------------#
 # Pane colors
 # set active/inactive window styles
@@ -79,6 +82,7 @@ set -g status-left-length 85
 set -g status-left ''
 set -g status-right-length 100
 set -g status-right 'continuum:#{continuum_status}m#[fg=green]#($TMUX_PLUGIN_MANAGER_PATH/tmux-mem-cpu-load/tmux-mem-cpu-load --colors --powerline-right --interval 2)#[default]'
+#set -g status-right 'continuum:#{continuum_status} | #{sysstat_cpu} | #{sysstat_mem} | #{sysstat_swap} | #{sysstat_loadavg} | #[fg=cyan]#(echo $USER)#[default]@#H'
 #--------------------------------------------------------------#
 
 #--------------------------------------------------------------#
