added new vars to PATH, start new tmux panes in current directory

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -29,9 +29,9 @@ set -g focus-events
 
 # custom split keys
 unbind-key %
-bind-key | split-window -h
+bind-key | split-window -h -c "#{pane_current_path}"
 unbind-key '"'
-bind-key - split-window -v
+bind-key - split-window -v -c "#{pane_current_path}"
 
 # Added to prevent odd delay when hitting ESC in neovim
 set -sg escape-time 10
