--- a/.gitmodules
+++ b/.gitmodules
@@ -43,3 +43,9 @@
 [submodule ".themes/zsh-spaceship-prompt"]
 	path = .themes/zsh-spaceship-prompt
 	url = https://github.com/denysdovhan/spaceship-prompt.git
+[submodule "/home/todd/.vim/bundle/vim-python"]
+	path = /home/todd/.vim/bundle/vim-python
+	url = https://github.com/vim-python/python-syntax.git
+[submodule "/home/todd/.vim/bundle/srcery"]
+	path = /home/todd/.vim/bundle/srcery
+	url = https://github.com/srcery-colors/srcery-vim
