--- a/.tmux.conf
+++ b/.tmux.conf
@@ -79,7 +79,7 @@ set -g status-interval 2
 set -g status-justify centre              # window list in middle
 # show host name and IP address on left side of status bar
 set -g status-left-length 85
-set -g status-left ''
+set -g status-left "#h : #(ip addr show enp3s0 | grep "inet[^6]" | awk '{print $2}')"
 set -g status-right-length 100
 set -g status-right 'continuum:#{continuum_status}m#[fg=green]#($TMUX_PLUGIN_MANAGER_PATH/tmux-mem-cpu-load/tmux-mem-cpu-load --colors --powerline-right --interval 2)#[default]'
 #set -g status-right 'continuum:#{continuum_status} | #{sysstat_cpu} | #{sysstat_mem} | #{sysstat_swap} | #{sysstat_loadavg} | #[fg=cyan]#(echo $USER)#[default]@#H'
