--- a/.gitmodules
+++ b/.gitmodules
@@ -4,9 +4,6 @@
 [submodule ".vim/bundle/vim-gitgutter"]
     path = .vim/bundle/vim-gitgutter
 	url = https://github.com/airblade/vim-gitgutter.git
-[submodule ".vim/bundle/YouCompleteMe"]
-	path = .vim/bundle/YouCompleteMe
-	url = https://github.com/Valloric/YouCompleteMe.git
 [submodule ".vim/bundle/nerdtree"]
 	path = .vim/bundle/nerdtree
 	url = https://github.com/scrooloose/nerdtree.git
@@ -49,3 +46,6 @@
 [submodule "/home/todd/.vim/bundle/srcery"]
 	path = /home/todd/.vim/bundle/srcery
 	url = https://github.com/srcery-colors/srcery-vim
+[submodule "/home/todd/.vim/bundle/coc.nvim"]
+	path = /home/todd/.vim/bundle/coc.nvim
+	url = git@github.com:neoclide/coc.nvim.git
