--- a/.gitmodules
+++ b/.gitmodules
@@ -1,8 +1,8 @@
 [submodule ".vim/bundle/vim-airline"]
 	path = .vim/bundle/vim-airline
-	url = https://github.com/vim-airline/vim-airline
+	url = https://github.com/vim-airline/vim-airline.git
 [submodule ".vim/bundle/vim-gitgutter"]
-    path = .vim/bundle/vim-gitgutter
+	path = .vim/bundle/vim-gitgutter
 	url = https://github.com/airblade/vim-gitgutter.git
 [submodule ".vim/bundle/nerdtree"]
 	path = .vim/bundle/nerdtree
@@ -40,12 +40,12 @@
 [submodule ".themes/zsh-spaceship-prompt"]
 	path = .themes/zsh-spaceship-prompt
 	url = https://github.com/denysdovhan/spaceship-prompt.git
-[submodule "/home/todd/.vim/bundle/vim-python"]
-	path = /home/todd/.vim/bundle/vim-python
+[submodule ".vim/bundle/vim-python"]
+	path = .vim/bundle/vim-python
 	url = https://github.com/vim-python/python-syntax.git
-[submodule "/home/todd/.vim/bundle/srcery"]
-	path = /home/todd/.vim/bundle/srcery
+[submodule ".vim/bundle/srcery"]
+	path = .vim/bundle/srcery
 	url = https://github.com/srcery-colors/srcery-vim
-[submodule "/home/todd/.vim/bundle/coc.nvim"]
-	path = /home/todd/.vim/bundle/coc.nvim
+[submodule ".vim/bundle/coc.nvim"]
+	path = .vim/bundle/coc.nvim
 	url = git@github.com:neoclide/coc.nvim.git
