changed default terminal to alacritty

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -14,12 +14,14 @@
 # add /usr/local/bin/bash
 #===================================================================
 
-# easy tmux reload
+# easy tmux reload <leader> r
 bind r source-file ~/.tmux.conf \; display "Reloaded ~/.tmux.conf"
 
 # set mouse mode to allow use of mouse for copying, scrolling, etc.
 set -g mouse on
-set -g default-terminal "screen-256color"
+
+# set -g default-terminal "screen-256color"
+set -g default-terminal "alacritty"
 set -g base-index 1
 set -g pane-base-index 1
 set -g history-limit 20000
