--- a/.tmux.conf
+++ b/.tmux.conf
@@ -20,9 +20,15 @@ bind r source-file ~/.tmux.conf \; display "Reloaded ~/.tmux.conf"
 # set mouse mode to allow use of mouse for copying, scrolling, etc.
 set -g mouse on
 
-set -g default-terminal "screen-256color"
-set -ga terminal-overrides ",xterm-256color*:Tc"
-# set -g default-terminal "alacritty"
+set -g default-terminal "tmux-256color"
+
+# this value should match the $TERM value outside of tmux, and it will tell
+# tmux that this terminal supports TrueColor
+# -- Use this value for iTerm2
+# set -ga terminal-overrides ",xterm-256color:Tc"
+# -- Use this value for alacritty
+set -ga terminal-overrides ",alacritty:Tc"
+
 set -g base-index 1
 set -g pane-base-index 1
 set -g history-limit 20000
