--- a/.tmux.conf
+++ b/.tmux.conf
@@ -133,7 +133,7 @@ set -g status-interval 2
 set -g status-justify centre              # window list in middle
 # show host name and IP address on left side of status bar
 set -g status-left-length 85
-set -g status-left "#h : #(ip addr show enp3s0 | grep "inet[^6]" | awk '{print $2}') : #S"
+set -g status-left "#h : #(ip addr show eno1 | grep "inet[^6]" | awk '{print $2}') : #S"
 set -g status-right-length 100
 set -g status-right '#[fg=$onedark_white,bg=$onedark_visual_grey]#(~/apps/kube-context.sh "$onedark_red")  #{continuum_status}m #[fg=$onedark_white,bg=$onedark_blue]#(~/apps/hdd_usage.sh) #[bg=$onedark_green] #($TMUX_PLUGIN_MANAGER_PATH/tmux-mem-cpu-load/tmux-mem-cpu-load --colors --interval 2) #[default]'
 #set -g status-right 'continuum:#{continuum_status} | #{sysstat_cpu} | #{sysstat_mem} | #{sysstat_swap} | #{sysstat_loadavg} | #[fg=cyan]#(echo $USER)#[default]@#H'
