--- a/.tmux.conf
+++ b/.tmux.conf
@@ -14,6 +14,9 @@
 # add /usr/local/bin/bash
 #===================================================================
 
+# This should be before any 'run' command, attempting to fix error 127
+set-environment -g PATH "/usr/local/bin:/bin:/usr/bin:$HOME/bin"
+
 # easy tmux reload <prefix> r
 bind r source-file ~/.tmux.conf \; display "Reloaded ~/.tmux.conf"
 
@@ -173,9 +176,6 @@ bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "xc
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @plugin 'tmux-plugins/tmux-yank'
-
-# This should be before any 'run' command, attempting to fix error 127
-set-environment -g PATH "/usr/local/bin:/bin:/usr/bin"
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
