Initial commmit for dotbot

--- a/.gitmodules
+++ b/.gitmodules
@@ -9,8 +9,11 @@
 	url = https://github.com/denysdovhan/spaceship-prompt.git
 [submodule "apps/diff-so-fancy"]
 	path = apps/diff-so-fancy
-	url = git@github.com:so-fancy/diff-so-fancy.git
+	url = https://github.com/so-fancy/diff-so-fancy.git
 [submodule "dotbot"]
 	path = dotbot
 	url = https://github.com/anishathalye/dotbot
 	ignore = dirty
+[submodule "dotbot-apt"]
+	path = dotbot-apt
+	url = https://github.com/bryant1410/dotbot-apt
