--- a/.tmux.conf
+++ b/.tmux.conf
@@ -173,6 +173,7 @@ bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "xc
 # Add plugins here and reload with "<prefix> + r", then install with "<prefix> + I"
 # set -g @plugin 'fcsonline/tmux-thumbs'
 # set -g @plugin 'laktak/extrakto'
+set -g @plugin 'thewtex/tmux-mem-cpu-load'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @plugin 'tmux-plugins/tmux-yank'
