--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -1,16 +1,46 @@
 - defaults:
     link:
+      # removes old target if it's a symlink
       relink: true
+      # create parent directories to the link as needed
+      create: true
 
+# check these directories for dead symlinks into dotfiles and remove them
 - clean: ['~']
 
-- link:
-    ~/.vimrc: .vimrc
-
 - create:
+    - ~/bin
     - ~/Downloads
-    - ~/.vim/sessions
-    - ~/.vim/undodir
+    - ~/vim/sessions
 
 - shell:
-  - [git submodule update --init --recursive, Install submodules]
+    - ['git submodule update --init --recursive', 'Install submodules']
+    - ['tic -xe alacritty,alacritty-direct Documents/alacritty.info', 'Setup terminfo']
+
+# Install NeoVim
+- shell:
+    - ['curl -L https://github.com/neovim/neovim/releases/download/v0.5.0/nvim.appimage -o ~/Downloads/nvim-stable']
+    - ['chmod u+x ~/Downloads/nvim-stable']
+    - ['mv ~/Downloads/nvim-stable $HOME/bin/nvim']
+
+# Install Tmux 3.2a
+- shell:
+    - ['bin/install-tmux.sh', 'Installing Tmux 3.2a']
+    - ['git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm', 'Installing TPM']
+
+- link:
+    ~/.config/:
+      glob: true
+      path: .config/*
+    ~/.themes/spaceship-prompt: .themes/spaceship-prompt
+    ~/.tmux/pane-border-format.sh: .tmux/pane-border-format.sh
+    ~/bin/ta: bin/ta
+    ~/.aliases: .aliases
+    ~/.exports: .exports
+    ~/.functions: .functions
+    ~/.gitconfig: .gitconfig
+    ~/.pgpass: .pgpass
+    ~/.tmux.conf: .tmux.conf
+    ~/.zshrc: .zshrc
+    ~/.antigen.zsh: antigen.zsh
+
