--- a/.tmux.conf
+++ b/.tmux.conf
@@ -63,13 +63,14 @@ onedark_white="#aab2bf"
 onedark_green="#98c379"
 onedark_visual_grey="#3e4452"
 onedark_comment_grey="#5c6370"
+inactive_pane="#16181c"
 
 set -g message-style fg=$onedark_white,bg=$onedark_black
 setw -g window-status-style fg=$onedark_black,bg=$onedark_black,none
 setw -g window-status-activity-style fg=$onedark_black,bg=$onedark_black,none
 setw -g window-status-separator ''
-set -g window-style fg=$onedark_comment_grey
-set -g window-active-style fg=$onedark_white
+set -g window-style fg=$onedark_comment_grey,bg=$inactive_pane
+set -g window-active-style fg=$onedark_white,bg=$onedark_black
 set -g pane-border-style fg=$onedark_white,bg=$onedark_black
 set -g pane-active-border-style fg=$onedark_green,bg=$onedark_black
 set -g display-panes-active-colour $onedark_yellow
@@ -84,17 +85,6 @@ set -g @prefix_highlight_output_prefix '  '
 set -g allow-rename off
 set -g window-status-format "#[fg=$onedark_white,bg=$onedark_black] #I| #W#{?window_flags,#{window_flags}, } "
 set -g window-status-current-format "#[fg=$onedark_white,bg=$onedark_visual_grey,nobold] #I| #W#{?window_flags,#{window_flags}, } "
-
-
-
-# set active/inactive window styles
-# set -g window-style 'fg=colour247,bg=colour236'
-# set -g window-active-style 'fg=colour250,bg=colour235'
-# setw -g window-status-current-style fg=white,bg=black
-
-#pane border
-# set-option -g pane-border-style 'bg=colour236,fg=colour247'
-# set-option -g pane-active-border-style 'bg=colour236,fg=colour112'
 #--------------------------------------------------------------#
 
 # Testing git status in tmux
@@ -135,14 +125,14 @@ set -g status-justify centre              # window list in middle
 set -g status-left-length 85
 set -g status-left "#h : #(ip addr show $network_interface | grep "inet[^6]" | awk '{print $2}') : #S"
 set -g status-right-length 100
-set -g status-right '#[fg=$onedark_white,bg=$onedark_visual_grey]#(~/apps/kube-context.sh "$onedark_red")  #{continuum_status}m #[fg=$onedark_white,bg=$onedark_blue]#(~/apps/hdd_usage.sh "$hdd_drive") #[bg=$onedark_green] #($TMUX_PLUGIN_MANAGER_PATH/tmux-mem-cpu-load/tmux-mem-cpu-load --colors --interval 2) #[default]'
+set -g status-right '#[fg=$onedark_white,bg=$onedark_visual_grey]#(~/apps/kube-context.sh "$onedark_red") #[fg=$onedark_white,bg=$onedark_blue]#(~/apps/hdd_usage.sh "$hdd_drive") #[bg=$onedark_green] #($TMUX_PLUGIN_MANAGER_PATH/tmux-mem-cpu-load/tmux-mem-cpu-load --colors --interval 2) #[default]'
 #set -g status-right 'continuum:#{continuum_status} | #{sysstat_cpu} | #{sysstat_mem} | #{sysstat_swap} | #{sysstat_loadavg} | #[fg=cyan]#(echo $USER)#[default]@#H'
 #--------------------------------------------------------------#
 
 #--------------------------------------------------------------#
 # Session Management
-set -g @continuum-save-interval '720' # minutes (720 = 12 hours)
-set -g @resurrect-strategy-vim 'session'
+# set -g @continuum-save-interval '720' # minutes (720 = 12 hours)
+# set -g @resurrect-strategy-vim 'session'
 
 # vi keybindings
 
@@ -173,9 +163,8 @@ bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "xc
 # Add plugins here and reload with "<prefix> + r", then install with "<prefix> + I"
 # set -g @plugin 'fcsonline/tmux-thumbs'
 # set -g @plugin 'laktak/extrakto'
-set -g @plugin 'thewtex/tmux-mem-cpu-load'
-set -g @plugin 'tmux-plugins/tmux-resurrect'
-set -g @plugin 'tmux-plugins/tmux-continuum'
+# set -g @plugin 'tmux-plugins/tmux-resurrect'
+# set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @plugin 'tmux-plugins/tmux-yank'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
