--- a/.tmux.conf
+++ b/.tmux.conf
@@ -114,7 +114,11 @@ bind-key -T copy-mode-vi C-\\ select-pane -l
 
 #--------------------------------------------------------------#
 # Status bar
-#
+
+# Net Speed
+set -g @net_speed_interfaces "eno1"
+set -g @net_speed_format "D:%10s U:%10s"
+
 # Script variables
 hdd_drive="/dev/nvme0n1p3"
 network_interface="eno1"
@@ -125,7 +129,7 @@ set -g status-justify centre              # window list in middle
 set -g status-left-length 85
 set -g status-left "#h : #(ip addr show $network_interface | grep "inet[^6]" | awk '{print $2}') : #S"
 set -g status-right-length 100
-set -g status-right '#[fg=$onedark_white,bg=$onedark_visual_grey]#(~/apps/kube-context.sh "$onedark_red") #[fg=$onedark_white,bg=$onedark_blue]#(~/apps/hdd_usage.sh "$hdd_drive") #[bg=$onedark_green] #($TMUX_PLUGIN_MANAGER_PATH/tmux-mem-cpu-load/tmux-mem-cpu-load --colors --interval 2) #[default]'
+set -g status-right '#[fg=$onedark_white,bg=$onedark_visual_grey]#(~/apps/kube-context.sh "$onedark_red") #[fg=$onedark_white,bg=$onedark_blue]#(~/apps/hdd_usage.sh "$hdd_drive") #[bg=$onedark_green] #{net_speed} #($TMUX_PLUGIN_MANAGER_PATH/tmux-mem-cpu-load/tmux-mem-cpu-load --colors --interval 2) #[default]'
 #set -g status-right 'continuum:#{continuum_status} | #{sysstat_cpu} | #{sysstat_mem} | #{sysstat_swap} | #{sysstat_loadavg} | #[fg=cyan]#(echo $USER)#[default]@#H'
 #--------------------------------------------------------------#
 
@@ -166,6 +170,7 @@ bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "xc
 # set -g @plugin 'tmux-plugins/tmux-resurrect'
 # set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @plugin 'tmux-plugins/tmux-yank'
+set -g @plugin 'tmux-plugins/tmux-net-speed'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
